--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,38 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #a2afa2;
+  --foreground: #212a21;
+
+  --font-color: #352424;
+  --button-bg: #ab703f;
+  --button-hover: #985b29;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-font: var(--font-color);
+  --color-button: var(--button-bg);
+  --color-button-hover: var(--button-hover);
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #212a21;
+    --foreground: #a2afa2;
+
+    --font-color: #fff;
+    --button-bg: #ab703f;
+    --button-hover: #985b29;
   }
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: var(--font-color);
   font-family: Arial, Helvetica, sans-serif;
 }
