--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,8 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-font: var(--font-color);
-  --color-button: var(--button-bg);
-  --color-button-hover: var(--button-hover);
+  --color-primary: var(--button-bg);
+  --color-primary-dark: var(--button-hover);
 
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
@@ -35,4 +35,12 @@ body {
   background: var(--background);
   color: var(--font-color);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+input:focus, 
+select:focus, 
+textarea:focus {
+  outline: none;
+  /* border-color: var(--button-bg); */
+  /* box-shadow: 0 0 0 2px var(--button-bg); */
 }
